--- a/buoi8b.html
+++ b/buoi8b.html
@@ -10,6 +10,7 @@
             color: aliceblue;
             font-size: 30px;
             text-align: center;
+            border: 2px dashed wheat;
         }
         .contain .title2{
             border: 2px solid red;
@@ -20,16 +21,24 @@
             color: brown;
             background-color: beige;
         }
+    .header .a1{
+        color: pink;
+        font-weight: 300;
+
+    }
+    .contain .a2{
+        color: red;
+    }
     </style>
 </head>
 <body>
     <div class="header">
-        <h1 class="title1">Green Academy</h1>
+        <h1 class="title1">Green <span class="a1">Academy</span></h1>
         <p>Nâng tầm cuộc sống</p>
     </div>
     <div class="contain">
         <h1 class="title2">Nội dung bài test 1</h1>
-        <p class="info">Hỗ trợ chứng chỉ cho học viên đạt test</p>
+        <p class="info">Hỗ trợ chứng chỉ cho học viên <span class="a2">đạt test</span></p>
     </div>
 </body>
 </html>
